@@ -30,7 +30,7 @@
 #include "../graphics.h"
 #include "../inventory.h"
 #include "../item.h"
-#include "../itemshortcut.h"
+//#include "../itemshortcut.h"
 #include "../log.h"
 
 #include "../resources/image.h"
@@ -198,7 +198,7 @@ ItemContainer::mousePressed(gcn::MouseEvent &event)
         int my = event.getY();
         int index = mx / gridWidth + ((my / gridHeight) * columns) + 2;
 
-        itemShortcut->setItemSelected(NULL);
+        //itemShortcut->setItemSelected(NULL);
         // Fix for old server, it should be: if (index >= mMaxItems)
         if (index > mMaxItems + 1)
         {
@@ -207,9 +207,9 @@ ItemContainer::mousePressed(gcn::MouseEvent &event)
         }
         Item *item = mInventory->getItem(index);
         setSelectedItem(item);
-        if (!item->isEquipment())
-        {
-            itemShortcut->setItemSelected(item);
-        }
+        //if (!item->isEquipment())
+        //{
+        //    itemShortcut->setItemSelected(item);
+        //}
     }
 }
