@@ -35,7 +35,7 @@ extern Window *inventoryWindow;
 extern Window *equipmentWindow;
 extern Window *skillDialog;
 extern Window *statusWindow;
-extern Window *itemShortcutWindow;
+//extern Window *itemShortcutWindow;
 
 namespace {
     struct MenuWindowListener : public gcn::ActionListener
@@ -62,7 +62,7 @@ MenuWindow::MenuWindow():
         "Equipment",
         "Inventory",
         "Skills",
-        "Shortcut",
+//        "Shortcut",
         "Setup",
         0
     };
@@ -107,10 +107,10 @@ void MenuWindowListener::action(const gcn::ActionEvent &event)
     {
         window = skillDialog;
     }
-    else if (event.getId() == "Shortcut")
-    {
-        window = itemShortcutWindow;
-    }
+    //else if (event.getId() == "Shortcut")
+    //{
+    //    window = itemShortcutWindow;
+    //}
     else if (event.getId() == "Setup")
     {
         window = setupWindow;
