@@ -2,6 +2,9 @@
 
 	* README, data/help/changes.txt, data/help/header.txt, NEWS: Updated
 	release date.
+	* src/game.cpp, src/gui/menuwindow.cpp, src/gui/itemcontainer.cpp,
+	src/main.cpp, src/CMakeLists.txt, src/net/inventoryhandler.cpp,
+	src/Makefile.am: Disabled non-functional item shortcut window.
 
 2007-12-23  Philipp Sehmisch  <tmw@crushnet.org>
 
